# rgwmanage

./: README.rst  requirements.txt  setup.cfg  setup.py
rgwmanage/: shell.py  user.py
