[metadata]
name = rgwmanage
summary = Manage ceph rados gateway
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = http://rgwmanage.weezhard.com
classifiers =
    Environment :: OpenStack
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Operating System :: POSIX :: Linux
author = weezhard
author-email = rgwmanage@weezhard.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    rgwmanage

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = docs

[entry_points]
console_scripts =
    rgwmanage=rgwmanage.shell:main
    rgwm=rgwmanage.shell:main

[bdist_wheel]
universal=1
